hadoop ingest part-3